--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,23 @@
-version: '3.7'
+version: '3.8'
 services:
-  web:
-    container_name: mycv
+  mycv:
+    build:
+      dockerfile: Dockerfile
+    image: tuanitpro/mycv
     labels:
       com.tuanitpro.description: "This is my cv using docker"
+  dev:
+    container_name: mycv
     image: nginx:latest
     volumes:
         # - "./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf"
         # - "./etc/ssl:/etc/ssl"
-        - ./web:/usr/share/nginx/html
+        - ./:/usr/share/nginx/html
         # - "./etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template"
     ports:
         - "8000:80"
-        - "3000:443"
     environment:
-        - NGINX_HOST=${NGINX_HOST}
+        - NGINX_HOST=8000
     # command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     restart: always
-    #build: ./dir
-    #image: mycv
 
